# dkj-business

./: README.md  pyproject.toml  run.py
dkj_business/: __init__.py  forms.py  helpers.py  models.py  routes.py
dkj_business/.env/: config.py
dkj_business/static/: app.js  styles.css
dkj_business/templates/: add_product.html  buy.html  increaseBalance.html  index.html  layout.html  login.html  modifyProfil.html  products.html  profil.html  register.html
instance/: dkj-business.db
migrations/versions/: 45803cde7073_initial_migration.py  657dc6ff21d9_first_migration.py  870752b6db17_initial_migration.py
