[tool.poetry]
name = "dkj-business"
version = "0.1.0"
description = ""
authors = ["DKJ <komlavidavo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-login = "^0.6.3"
flask-wtf = "^1.2.2"
flask-mail = "^0.10.0"
python-dotenv = "^1.0.1"
flask-email = "^1.4.4"
email-validator = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
